1999-07-14  Laurent Pautet  <pautet@scapin.enst.fr>

        * s-gaphlo.adb, s-gaphlo.ads: Remove a lot of unused tables and
        subprograms.

        * s-garuni.adb: As there is no second pass when there is no boot
        mirrors, reply to pending requests immediatly. Redefine pending
        requests not to be a array of boolean with Partition_ID as
        index.

        * s-garuni.ads, s-garuni.adb, s-garpar.ads, s-garpar.adb,
        s-gartyp.ads, s-garhea.adb: Redefine units per partition table and
        use partition table from System.Garlic.Partitions instead.

1999-07-14  Laurent Pautet  <pautet@dorine.enst.fr>

        * s-garuni.adb, s-garpar.ads, s-garpar.adb: Do not send unit table
        or partition table to boot mirrors group when there is only one
        partition in this group (useless marshalling and unmarshalling).

1999-07-13  Laurent Pautet  <pautet@scapin.enst.fr>

        * s-garpar.adb: Improve partition id table use.

        * s-gartab.adb: Improve Last computation.

        * s-garfil.adb: Fix bug introduced by recent checkins. As we do
        not look at partition id table directly, reload channel copy
        because it may be updated in the meantime.

1999-07-12  Laurent Pautet  <pautet@dorine.enst.fr>

        * s-gartyp.ads, s-rpc.ads: Partition_ID can now grow forever.

        * s-garpar.adb: Do not look at partition id table directly, use
        Get_Component to force partition id table extension.

        * s-garfil.adb: Same as above.

        * Makefile.in, Makefile.am: Update dependencies.

1999-07-12  Laurent Pautet  <pautet@scapin.enst.fr>

        * s-garhea.adb, s-gartcp.adb, s-gartyp.ads, s-garhea.adb,
        s-garpar.ads, s-garpar.adb: Do not use Last_PID slot in partition
        table to save temporary info on Boot_Partition. Do not use
        Last_PID to scan partition table, use Partitions.Last. Do not
        initialize the whole partition id table and increment size when
        needed.
